--- a/protocols/bb92.tex
+++ b/protocols/bb92.tex
@@ -16,7 +16,7 @@
             \item если детектировал на $135^{\circ}$ (<<$\nwarrow$>>), значит Алиса выбрала поляризацию $0^{\circ}$ (<<$\to$>>) и $b_i=0$;
             \item если детектировал на $90^{\circ}$ (<<$\uparrow$>>), значит Алиса выбрала поляризацию $45^{\circ}$ (<<$\nearrow$>>) и $b_i=1$.
         \end{itemize}
-    \item[{}] Боб по открытому классическому каналу связи сообщает Алисе, получилось детектировать фотон или нет. Если да, то бит принимается участниками за переданный.
+    \item[{}] Боб по классическому каналу связи сообщает Алисе, получилось детектировать фотон или нет. Если да, то бит принимается участниками за переданный.
 \end{protocol}
 
 \begin{table}
@@ -29,7 +29,7 @@
         \hline
         \parbox[c][1cm][c]{2,8cm}{поляризация \\ детектора Боба} & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ \\
         \hline
-        \parbox[c][1cm][c]{2,8cm}{вероятность детектирования} & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ & 0 & 0 & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ \\
+        \parbox[c][1cm][c]{2,8cm}{вероятность \\ детектирования} & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ & 0 & 0 & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ \\
         \hline
         \parbox[c][1cm][c]{2,8cm}{удалось или нет детектировать} & да & нет & нет & нет & нет & да & нет &  нет \\
         \hline
