--- a/protocols/classification.tex
+++ b/protocols/classification.tex
@@ -13,7 +13,7 @@
     \item Классификация по числу передаваемых сообщений:
     \begin{itemize}
         \item интерактивный\index{протокол!интерактивный} (с наличием взаимного обмена сообщениями);
-        \item неинтерактивный\index{протокол!неинтерактивный} (с однократной передачей сообщений), часто называется \emph{схемами}\index{схема}\footnote{Определение не совсем полное. Любая схема предполагает как минимум два этапа. На первом предварительном этапе доверенный центр распределяет некоторую информацию между одноранговыми участниками. На втором этапе (конкретные сеансы протокола) участники обмениваются этой информацией, получая исходный секрет или новый секретный сеансовый ключ. Причём обмен информацией может идти более чем между двумя участниками. Однако после взаимного обмена информацией дополнительных проходов для выполнения целей схемы не требуется.}.
+        \item неинтерактивный\index{протокол!неинтерактивный}, в котором участники обмениваются по одному сообщению, причём их содержание не зависит друг от друга. Также называется \emph{схемами}\index{схема}\footnote{Определение не совсем полное. Любая схема предполагает как минимум два этапа. На первом предварительном этапе доверенный центр распределяет некоторую информацию между одноранговыми участниками. На втором этапе (конкретные сеансы протокола) участники обмениваются этой информацией, получая исходный секрет или новый секретный сеансовый ключ. Причём обмен информацией может идти более чем между двумя участниками. Однако после взаимного обмена информацией дополнительных проходов для выполнения целей схемы не требуется.}.
     \end{itemize}
     \item Классификация по числу проходов (раундов):
     \begin{itemize}
@@ -35,9 +35,9 @@
     \end{itemize}
     \item Классификация по типам участников:
     \begin{itemize}
-        \item одноранговый, когда все участники могут выполнять любые роли в рамках протокола;
+        \item одноранговый, когда все участники в рамках протокола могут выполнять произвольные роли;
         \item с доверенным посредником, когда в протоколе всегда участвует третья доверенная сторона;
-        \item с доверенным арбитром, когда в протоколе может участвовать третья доверенная сторона, если остальные участники не пришли к согласию.
+        \item с доверенным арбитром, когда в протоколе может участвовать третья доверенная сторона, но только в отдельных случаях, когда остальные участники не пришли к согласию.
     \end{itemize}
 \end{itemize}
 
