--- a/protocols/dass.tex
+++ b/protocols/dass.tex
@@ -31,7 +31,7 @@
     \item[(6)] $Bob \to \left\{ E_K \left( T_B \right) \right\} \to Alice$
 \end{protocol}
 
-С помощью сертификатов открытых ключей $S_T \left( B, K_B \right)$ и $S_T \left( A, K_A \right)$, которые отправляет Трент, и дальнейшего подтверждения владения соответствующими ключами, участники могут аутентифицировать друг-друга. Успешная расшифровка временных меток из сообщений $E_K \left( T_A \right)$ и $E_K \left\{ T_B \right\}$ обеспечивает подтверждение владением сеансовым ключом.
+С помощью $S_T \left( B, K_B \right)$ и $S_T \left( A, K_A \right)$ -- сертификатов открытых ключей, которые отправляет Трент, и дальнейшего подтверждения владения соответствующими ключами, участники могут аутентифицировать друг-друга. Успешная расшифровка временных меток из сообщений $E_K \left( T_A \right)$ и $E_K \left\{ T_B \right\}$ обеспечивает подтверждение владением сеансовым ключом.
 
 \begin{figure}
 	\centering
@@ -51,7 +51,8 @@
 В протоколе используется время жизни ($L$) сеансового ключа $K_P$, однако в сообщение не включена метка времени. В результате протокол остаётся уязвимым к атаке с известным сеансовым ключом (KN)\index{атака!с известным сеансовым ключом}. Предположим, что Меллори смогла записать полностью прошедший сеанс связи между Алисой и Бобом, а потом смогла получить доступ к сеансовому ключу $K$. Это позволяет Меллори аутентифицировать себя как Алиса перед Бобом (рис.~\ref{fig:key_distribution-dass-kn-attack}).
 
 \begin{protocol}
-    \item[(1)] $Mellory~(Alice) \to \left\{ E_K \left( T_M \right), S_A \left( L, A, K_P \right), S_{K_P} \left( E_B \left( K \right) \right) \right\} \to Bob$
+    \item[(1)] $Mellory~(Alice) \to \left\{ E_K \left( T_M \right), S_A \left( L, A, K_P \right), S_{K_P} \left( E_B \left( K \right) \right) \right\} \\
+    \to Bob$
     \item[(2)] $Bob \to \left\{ A \right\} \to Trent$
     \item[(3)] $Trent \to \left\{ S_T \left( A, K_A \right) \right\} \to Bob$
     \item[(4)] $Bob \to \left\{ E_K \left( T_B \right) \right\} \to Mellory~(Alice)$
