--- a/protocols/denning-sacco.tex
+++ b/protocols/denning-sacco.tex
@@ -57,7 +57,7 @@ Bob~(Alice) \to \{ & E_C( S_A ( K, T_A ) ), & \\
              & S_T( A, K_A, T_T ),    & \\ 
              & S_T( C, K_C, T_T )     & \} \to Clara
 \end{array}$
-	\item[(8)] Клара успешно проверяет подпись доверенного центра на сертификате $S_T( A, K_A, T_T )$, расшифровывает сессионный ключ $K$ и проверяет подпись Алисы.
+	\item[(8)] Клара проверяет подпись доверенного центра $T$ на сертификате $S_T( A, K_A, T_T )$, расшифровывает сессионный ключ $K$ и проверяет подпись Алисы.
 \end{protocol}
 
 В результате Клара уверена, что получила от Алисы новый сессионный ключ $K$.
