--- a/protocols/girault_scheme.tex
+++ b/protocols/girault_scheme.tex
@@ -8,15 +8,18 @@
     \item Доверенный центр (Трент, $T$):
     \begin{itemize}
         \item выбирает общий модуль $n = p \times q$, где $p$ и $q$ -- большие простые числа;
-        \item выбирает пару из закрытого и открытого ключей $K_{T, \text{public}}: (e, n)$ и $K_{T, \text{private}}: (d, n)$;
+        \item выбирает пару из закрытого и открытого ключей:\[\begin{array}{l}
+            K_{T, \text{public}}: (e, n) \\
+            K_{T, \text{private}}: (d, n);
+        \end{array}\]
         \item выбирает элемент $g$ поля $\mathbb{Z}_n^{\times}$ максимального порядка;
-        \item публикует в общедоступном месте параметры схемы $n$, $e$ и $g$.
+        \item публикует в общедоступном для всех участников месте параметры схемы $n$, $e$ и $g$.
     \end{itemize}
     \item Каждый из легальных участников:
     \begin{itemize}
         \item выбирает себе закрытый ключ $s_i$ и идентификатор $I_i$;
-        \item вычисляет и отправляет доверенному центру $v_i = g^{-s_i} \bmod n$;
-        \item используя протокол аутентификации сторон (см. ниже) легальный участник доказывает доверенному центру, что владеет закрытым ключом, не раскрывая его значение;
+        \item вычисляет и отправляет доверенному центру\[v_i = g^{-s_i} \mod n;\]
+        \item используя протокол аутентификации сторон (см. ниже) участник доказывает доверенному центру $T$, что владеет закрытым ключом, не раскрывая его значение;
         \item получает от доверенного центр свой открытый ключ:
             \[ P_i = (v_i - I_i)^d = (g^{-s_i} - I_i)^d \mod n; \]
     \end{itemize}
@@ -61,7 +64,7 @@
 	\caption{Схема Жиро\label{fig:key_distribution-girault-scheme}}
 \end{figure}
 
-Протокол генерации сессионного ключа, либо просто \emph{схема Жиро}, как и другие схемы, состоит из проходов обмена открытой информацией и вычисления ключа (рис.~\ref{fig:key_distribution-girault-scheme}).
+Протокол генерации сессионного ключа, называемый \emph{схемой Жиро}, как и другие схемы, состоит из проходов обмена открытой информацией и вычисления ключа (рис.~\ref{fig:key_distribution-girault-scheme}).
 
 \begin{protocol}
     \item[(1)] $Alice \to \left\{ P_A, I_A \right\} \to Bob$
