--- a/protocols/index.tex
+++ b/protocols/index.tex
@@ -19,7 +19,7 @@
 
 \begin{itemize}
 	\item В результате работы протокола между двумя абонентами должен быть сформирован секретный сессионный ключ.
-	\item Успешное окончание работы протокола распространения ключей должно означать успешную взаимную аутентификацию абонентов. Не должно быть такого, что протокол успешно завершился с точки зрения одной из сторон, а вторая сторона при этом представлена злоумышленником.
+	\item Успешное окончание протокола в том числе должно означать и успешную взаимную аутентификацию абонентов. Не должно быть такого, что протокол успешно завершился с точки зрения одной из сторон, а вторая сторона при этом представлена злоумышленником.
 	\item К участию в работе протокола должны допускаться только легальные пользователи сети. Внешний пользователь не должен иметь возможность получить общий сессионный ключ с кем-либо из абонентов.
 	\item Добавление нового абонента в сеть (или исключение из неё) не должно требовать уведомления всех участников сети.
 \end{itemize}
