--- a/protocols/properties.tex
+++ b/protocols/properties.tex
@@ -10,8 +10,9 @@
 			\langen{Entity authentication (Peer Entity Authentication)}.
 		\item[{}] Гарантия для одной стороны протокола через представление доказательств и / или учётных данных второй стороны, участвующей в протоколе, и того, что вторая сторона действительно участвовала в текущем сеанса протокола. Обычно делается через представления таких данных, которые могли быть сгенерированы только второй стороной. Аутентификация субъекта подразумевает, что полученные данные могут быть однозначно прослежены до субъекта протокола, что подразумевает аутентификацию источника данных.
 		\item[(G2)] Аутентификация сообщения.\\*
-			\langen{Message authentication (Data Origin Authentication)}.
-		\item[{}] Гарантия того, что полученное сообщение или фрагмент данных были созданы определённым субъектом в какое-то (обычно неуказанное) время в прошлом, и что эти данные не были повреждены или подделаны. Но без предоставления уникальности или своевременности. Аутентификация сообщений подразумевает их целостность.
+			\langen{Message authentication\\
+                (Data Origin Authentication)}.
+		\item[{}] Гарантия того, что полученное сообщение или фрагмент данных были созданы определённым субъектом в какое-то (обычно неуказанное) время в прошлом, и что эти данные не были повреждены или подделаны в процессе передачи (злоумышленником или из-за ошибок в канале связи). Но без предоставления уникальности или своевременности. Аутентификация сообщений подразумевает их целостность.
 		\item[(G3)] Защита от повтора.\\*
 			\langen{Replay Protection}.
 		\item[{}] Защита от ситуации, когда некоторая сторона запишет некоторое сообщение и воспроизведёт его позднее (возможно -- в другом сеансе протокола), что приведёт к некорректной интерпретации данной стороны как аутентифицированной.
@@ -22,7 +23,7 @@
 	\begin{itemize}
 		\item[(G4)] Неявная аутентификация получателя.\\*
 			\langen{Implicit Destination Authentication}.
-		\item[{}] Протокол должен гарантировать, что отправленное сообщение доступно для чтения только легальным получателям. То есть, только легальные авторизованные участники будут иметь доступ к актуальной информации, многоадресному сообщению или сеансу групповой связи. Включает в себя группы рассылки с очень динамичным членством.
+		\item[{}] Протокол должен гарантировать, что отправленное сообщение доступно для чтения только легальным получателям. Только авторизованные участники будут иметь доступ к актуальной информации, многоадресному сообщению или сеансу групповой связи. Включает в себя группы рассылки с очень динамичным членством.
 		\item[(G5)] Аутентификация источника.\\*
 			\langen{Source Authentication}.
 		\item[{}] Легальные получатели смогут аутентифицировать источник и содержание информации или группового общения. Включает случаи, когда члены группы не доверяют друг другу.
@@ -48,7 +49,7 @@
 			\langen{Fresh Key Derivation}.
 		\item[{}] Гарантия возможности создать новые сессионные ключи для каждого сеанса протокола. 
 		\item[(G11)] Защищённая возможность договориться о параметрах безопасности.\\*
-			\langen{Secure capabilities negotiation (Resistance against Downgrading and Negotiation Attacks)}.
+			\langen{Secure capabilities negotiation \\ (Resistance against Downgrading and Negotiation Attacks)}.
 		\item[{}] Гарантия не только того, что легальные стороны имеют возможность договориться о параметрах безопасности, но и того, что нелегальная сторона не вмешалась в протокол и не привела к выбору предпочтительных ей (возможно -- наиболее слабых) параметров безопасности.
 	\end{itemize}
 
@@ -69,11 +70,11 @@
 
 	\item[(G15)] Ограниченная защита от атак отказа в обслуживании.\\*
 		\langen{(Limited) Denial-of-Service (DoS) Resistance}.
-	\item[{}] Гарантия, что протокол следует определённым принципам, уменьшающих вероятность (усложняющих использование) отдельных классов атак отказа в обслуживании.
+	\item[{}] Протокол следует определённым принципам, уменьшающих вероятность (усложняющих использование злоумышленником) отдельных классов атак отказа в обслуживании.
 
 	\item[(G16)] Неизменность отправителя.\\*
 		\langen{Sender Invariance}.
-	\item[{}] Гарантия для одной из сторон, что источник сообщения остался таким же, как тот, который начал общение, хотя фактическая идентификация источника не важна для получателя.
+	\item[{}] Гарантия для одной (возможно для каждой) из сторон, что источник сообщения остался таким же, как тот, который начал общение, хотя фактическая идентификация источника не важна для получателя.
 
 	\item Неотрекаемость.\\*
 		\langen{Non-repudiation}.
@@ -95,7 +96,7 @@
 
 \end{itemize}
 
-Примеры свойств безопасности, реализуемыми различными протоколами приведены в таблице~\ref{tab:protocols-properties}).
+Примеры свойств безопасности, реализуемыми различными известными протоколами приведены в таблице~\ref{tab:protocols-properties}).
 
 \begin{landscape}
 {\renewcommand{\arraystretch}{1.5}
