--- a/protocols/symmetric/needham-schroeder.tex
+++ b/protocols/symmetric/needham-schroeder.tex
@@ -27,11 +27,11 @@
 	\item[(5)] $ Alice	\to \{ E_K \left( R_B - 1 \right) \}				\to Bob $
 \end{protocol}
 
-Протокол удобен с точки зрения сетевого взаимодействия участников. И общение с доверенным центром, и с конечным участником (Бобом) начинается только по инициативе первого участника (Алисы). При возникновении любых проблем передачи пакетов их видит именно то лицо, которое заинтересованно в получении ключей и доступов\footnote{Сравните с протоколом <<Yahalom>>, в котором при возникновении проблемы общения Трента и Алисы на третьем проходе Тренту потребовалось бы уведомить об этом Боба, а Бобу, в свою очередь, Алису.}. И если бы общение шло с использование протокола TCP/IP, потребовалось бы всего 2 сессии протокола TCP для выработки ключа. Причём последнюю сессию можно не закрывать, а использовать для дальнейшего взаимодействия уже с ключом $K$.
+Протокол удобен с точки зрения сетевого взаимодействия. И общение с доверенным центром, и с конечным участником (Бобом) начинается только по инициативе первого участника (Алисы). При возникновении любых проблем передачи пакетов их видит именно то лицо, которое заинтересованно в получении ключей и доступов\footnote{Сравните с протоколом <<Yahalom>>, в котором при возникновении проблемы общения Трента и Алисы на третьем проходе Тренту потребовалось бы уведомить об этом Боба, а Бобу, в свою очередь, Алису.}. И если бы общение шло с использование протокола TCP/IP, потребовалось бы всего 2 сессии протокола TCP для выработки ключа. Причём последнюю сессию можно не закрывать, а использовать для дальнейшего взаимодействия уже с ключом $K$.
 
 Протокол обеспечивает и двустороннюю аутентификацию сторон, и, казалось бы, защиту от атак с повторной передачей (\langen{replay attack}). Последнее делается с помощью введения уже известных по модифицированному протоколу <<Wide-Mouth Frog>> случайных меток $R_A$ и $R_B$. Действительно, без знания ключа злоумышленник не сможет выдать себя за Алису перед Бобом (так как не сможет расшифровать пакет с зашифрованной меткой $R_B$).
 
-Относительно мелкий недостаток протокола в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
+Относительно мелкий недостаток протокола в том, что во втором пакете доверенный центр в зашифрованном виде передаёт $E_B \left( K, A \right)$, что потом сразу в следующем, в третьем шаге пересылается по открытому каналу от Алисы к Бобу. Отказ от бессмысленного повторного шифрования чуть уменьшит нагрузку на вычислительные ресурсы доверенного центра.
 
 \begin{figure}
 	\centering
@@ -61,7 +61,9 @@
 	\item[(3)] $ Alice \to \{ E_B \left( K, A \right) \} \to Bob $
 	\item[(4)] $ Bob \to \{ E_K \left( R_B \right) \} \to Alice $
 	\item[(5)] $ Alice \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
-	\item[{}]  $\dots$ по прошествии некоторого времени $\dots$
+\end{protocol}
+\begin{protocol}
+    \item[{}]  $\dots$ по прошествии некоторого времени $\dots$
 	\item[(6)] $ Eva~(Alice) \to \{ E_B \left( K, A \right) \} \to Bob $
 	\item[(7)] $ Bob \to \{ E_K \left( R_B \right) \} \to Eva~(Alice) $
 	\item[(8)] $ Eva (Alice) \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
