--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -28,7 +28,7 @@
 	\end{array}\]
 \end{itemize}
 
-Диаграмма последовательности взаимодействия участников протокола показана на рис.~\ref{fig:key_distribution-three-pass}. Протокол состоит из трёх проходов с передачей сообщений (отсюда название) и одного заключительного, на котором Боб вычисляет сеансовый ключ.
+Протокол состоит из трёх проходов с передачей сообщений (отсюда и название) и одного заключительного, на котором Боб вычисляет сеансовый ключ. Диаграмма последовательности протокола изображена на рис.~\ref{fig:key_distribution-three-pass}.
 
 \begin{protocol}
     \item[(1)] Алиса выбирает новый сеансовый ключ $K$
@@ -87,8 +87,10 @@
 
 По окончании сеанса протокола Алиса и Боб знают общий сеансовый ключ $K$.
 
-Предложенный выбор коммутативной функции шифрования совершенной секретности является неудачным, так как существуют ситуации, при которых криптоаналитик может определить ключ $K$. Предположим, что криптоаналитик перехватил все три сообщения:
-    \[ K \oplus K_A, ~~ K \oplus K_A \oplus K_B, ~~ K \oplus K_B. \]
+Предложенный выбор коммутативной функции шифрования совершенной секретности является неудачным, так из переданных сообщений криптоаналитик может тривиально определить ключ $K$. Предположим, что криптоаналитик перехватил все три сообщения: \[
+    K \oplus K_A, ~~ K \oplus K_A \oplus K_B, ~~ K \oplus K_B.
+\]
+
 Сложение по модулю 2 всех трёх сообщений даёт ключ $K$. Поэтому такая система шифрования не применяется.
 
 Теперь приведём протокол надёжной передачи секретного ключа, основанный на экспоненциальной (коммутативной) функции шифрования. Стойкость этого протокола связана с трудностью задачи вычисления дискретного логарифма: при известных значениях $y, g, p$, найти $x$ из уравнения $y = g^x \bmod p$.
