--- a/protocols/bb84.tex
+++ b/protocols/bb84.tex
@@ -3,7 +3,7 @@
 
 В 1984 году Чарльз Беннетт (\langen{Charles Henry Bennett}) и Жиль Брассар (\langfr{Gilles Brassard}) предложили новый квантовый протокол распределения ключа~\cite{Bennett:Brassard:1984}. Как и у других протоколов, его целью является создание нового сеансового ключа, который в дальнейшем можно использовать в классической симметричной криптографии. Однако особенностью протокола является использование отдельных положений квантовой физики для гарантии защиты получаемого ключа от перехвата злоумышленником.
 
-До начала очередного раунда генерации сеансового ключа предполагается, что у Алисы и Боба, как у участников протокола, имеется:
+До начала очередного сеанса протокола предполагается, что у Алисы и Боба, как у участников протокола, имеются:
 
 \begin{itemize}
 	\item квантовый канал связи (например, оптоволокно);
@@ -23,7 +23,7 @@
 
 \subsubsection{Генерация фотона}
 
-В первой части протокола, с точки зрения физика-экспериментатора, Алиса берёт единичный фотон и поляризует под одним из четырёх углов: 0, 45, 90 или 135. Будем говорить, что Алиса сначала выбрала базис поляризации (<<+>> или <<×>>), а затем выбрала в этом базисе одно из двух направлений поляризации:
+В первой части протокола, с точки зрения фи\-зи\-ка-экс\-пе\-ри\-мен\-та\-то\-ра, Алиса берёт единичный фотон и поляризует под одним из четырёх углов: 0, 45, 90 или 135. Будем говорить, что Алиса сначала выбрала базис поляризации (<<+>> или <<×>>), а затем выбрала в этом базисе одно из двух направлений поляризации:
 
 \begin{itemize}
 	\item $0^{\circ}$ (<<$\to$>>) или $90^{\circ}$ (<<$\uparrow$>>) в первом базисе (<<+>>);
