--- a/protocols/lo05.tex
+++ b/protocols/lo05.tex
@@ -3,7 +3,7 @@
 
 В 2005 году  Хои-Квоном Ло, Ксионфеном Ма и Кай Ченом (\langen{Hoi-Kwong Lo, Xiongfeng Ma, Kai Chen}, ~\cite{Lo:Ma:Chen:2004, Lo:Ma:Chen:2005}) была предложена модификация к квантовым протоколам, основанная на возможности обнаружения злоумышленника через измерение характеристик передаваемого сигнала (потока фотонов).
 
-Авторы обратили внимание, что защищённость протоколов BB84 и BB92 основывается на невозможности злоумышленником скопировать состояние единственного фотона. В случае, если отправитель вместо передачи одного фотона будет передавать два и больше, это позволит злоумышленнику проводить атаки, связанные с разбиением мультифотонных сигналов. Одну копию фотона криптоаналитик будет сохранять себе, а Бобу отправлять вторую. Передачу же однофотонных состояний можно блокировать.
+Авторы обратили внимание, что защищённость квантовых протоколов BB84 и BB92 основывается на невозможности злоумышленником скопировать состояние единственного фотона. Если отправитель вместо передачи одного фотона будет передавать два и больше, это позволит злоумышленнику проводить атаки, связанные с разбиением мультифотонных сигналов. Одну копию фотона криптоаналитик будет сохранять себе, а Бобу отправлять вторую. Передачу же однофотонных состояний можно блокировать.
 
 Было предложено ослабить требование к генераторам сигнала (не требовать однофотонных состояний), а вместо этого использовать состояния-ловушки, измерение которых злоумышленником (в том числе с разбиением) можно будет отследить.
 
