--- a/public-key/GOST_R_34.10-2001.tex
+++ b/public-key/GOST_R_34.10-2001.tex
@@ -31,7 +31,7 @@ $A$ формирует открытый ключ следующим образо
 
 Теперь сторона $A$ создаёт свою цифровую подпись $S(M)$ сообщения $M$, выполняя следующие действия.
 \begin{enumerate}
-    \item Вычисляет $\alpha = h(M)$, где $h$ -- криптографическая хэш-функция, определённая стандартом ГОСТ Р 34.11-94. В российском стандарте длина $h(M)$ равна 256 бит.
+    \item Вычисляет $\alpha = h(M)$, где $h$ -- криптографическая хэш-функ\-ция, определённая стандартом ГОСТ Р 34.11-94. В российском стандарте длина $h(M)$ равна 256 бит.
     \item Вычисляет $e = \alpha \mod q$.
     \item Случайно выбирает число $k$ и вычисляет точку
         \[ C = k P = (x_c, y_c). \]
